# corgi-opengl

./: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  install.bat
.github/workflows/: Actions.yml
cmake/: Config.cmake.in
include/corgi/opengl/: buffer.h  color.h  depth_buffer.h  image.h  material.h  mesh.h  pipeline.h  primitives.h  program.h  render_object.h  renderer.h  shader.h  shaders.h  stencil.h  texture.h  uniform_buffer_object.h  uniform_buffers.h  vertex_array.h  vertex_attribute.h
src/: CMakeLists.txt  buffer.cpp  color.cpp  image.cpp  mesh.cpp  pipeline.cpp  primitives.cpp  program.cpp  renderer.cpp  shader.cpp  stencil.cpp  texture.cpp  vertex_array.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: unit_tests_main.cpp
